one more slide & updated readme

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           </section>
 
           <section>
-            
+            <h2>Pourquoi la data visualization avec D3 ?</h2>
+            <ul>
+              <li>Aider à comprendre</li>
+              <li>Sensibiliser à l'utilité des données</li>
+              <li>Créer des graphes interactifs, versatiles & évolutifs</li>
+            </ul>
           </section>
         </section>
 
