--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@ svgSelection.append("circle")
           <h3>Slides et ressources disponibles :
             <a href="http://github.com/rprioul/d3-presentation/" target="_blank">http://github.com/rprioul/d3-presentation/</a>
           </h3>
+          <br>
+          <br>
+          <br>
+          <p>Slides réalisées avec Reveal.js</p>
         </section>
       </div>
     </div>
