--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
               <li>Manipuler & présenter des données</li>
               <li>HTML, CSS et SVG</li>
             </ul>
-            <p> </p>
+            <br>
+            <br>
             <h3>Site officiel : <a href="https://d3js.org/" target="_blank">https://d3js.org/</a></h3>
           </section>
 
@@ -147,7 +148,9 @@ svgSelection.append("circle")
           <br>
           <br>
           <br>
-          <p>Slides réalisées avec Reveal.js</p>
+          <br>
+          <br>
+          <small>Slides réalisées avec Reveal.js</small>
         </section>
       </div>
     </div>
