last fix for real

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           </section>
 
           <section class="network">
-            <img src="./img/networkChart.png" alt="Sankey chart illustration" width="900" height="500">
-              <h3>Sankey chart</h3>
+            <img src="./img/networkChart.png" alt="Network chart illustration" width="900" height="500">
+              <h3>Network chart</h3>
           </section>
 
           <section class="sunburst">
