--- a/index.html
+++ b/index.html
@@ -138,7 +138,13 @@ svgSelection.append("circle")
         </section>
 
         <section>
-          <h2>La suite au prochain épisode !</h2>
+          <section>
+            <h2>La suite au prochain épisode !</h2>
+          </section>
+          <section>
+            <img src="./img/badChart.png" alt="Sankey chart illustration" width="300" height="300" style="float: left;">
+            <img src="./img/goodChart.png" alt="Sankey chart illustration" width="300" height="300" style="float: right;">
+          </section>
         </section>
 
         <section>
