--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="reveal">
       <div class="slides">
         <section class="deck-slide" data-background-image="./img/d3logo.png" background-repeat="no-repeat">
-          <h1>D3.js</h1>
+          <h1>Data Viz<br>avec D3.js</h1>
           <h3>Data Driven Documents</h3>
         </section>
 
